--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "sanitize-html": "^2.17.0"
   },
