--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "votoseguro-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "serverjs",
   "type": "module",
   "scripts": {
     "start": " node server.js",
