--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": " node server.js",
     "dev": " nodemon server.js",
-    "test": "jest",
-    "test:unit": "jest tests/Unitarias --runInBand",
+    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/Unitarias --verbose --runInBand",
     "test:integration": "jest tests/Integracion --verbose --runInBand"
   },
   "keywords": [],
@@ -26,6 +25,7 @@
     "@babel/preset-env": "^7.28.3",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
+    "jest-junit": "^16.0.0",
     "mongodb": "^6.20.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
