--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,9 +41,14 @@ steps:
     displayName: 'Run Unit Tests'
 
   # 7️⃣ Ejecutar Integration Tests
+  # 7️⃣ Ejecutar Integration Tests en el host (no en contenedor)
   - script: |
-      docker exec integration-tests sh -c "npx jest tests/Integracion --verbose --runInBand --reporters=default --reporters=jest-junit || true"
-    displayName: 'Run Integration Tests'
+    npx jest tests/Integracion --verbose --runInBand --reporters=default --reporters=jest-junit
+    displayName: 'Run Integration Tests (host)'
+    env:
+    DOCKER_HOST: tcp://localhost:2375
+    TESTCONTAINERS_RYUK_DISABLED: true
+    TESTCONTAINERS_CHECKS_DISABLE: true
 
   # 8️⃣ Publicar resultados de Unit Tests
   - task: PublishTestResults@2
