--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
   unit-tests:
     build: .
-    mem_limit: 1g 
     container_name: unit-tests
     command: >
       sh -c "node --experimental-vm-modules node_modules/jest/bin/jest.js
       tests/Unitarias --runInBand --verbose --reporters=default
       --reporters=jest-junit"
     volumes:
-      - .:/app
+      - .:/app:cached
+      - /app/node_modules 
       - ./reports:/app/reports
     environment:
       - JEST_JUNIT_OUTPUT_DIR=./reports/unit
@@ -16,29 +16,21 @@ services:
 
   integration-tests:
     build: .
-    mem_limit: 2g
     container_name: integration-tests
-    # 👇 Ejecutar como root evita el error de permisos al acceder al socket de Docker
-    user: root
     depends_on:
       - unit-tests
     command: >
-      sh -c "npx jest tests/Integracion --verbose --runInBand --reporters=default
+      sh -c " npx jest tests/Integracion --verbose --runInBand --reporters=default
       --reporters=jest-junit"
     volumes:
-      # Código y reportes
-      - .:/app
+      - .:/app:cached
+      - /app/node_modules 
       - ./reports:/app/reports
-
-      # 👇 Monta el socket del Docker host (clave para Testcontainers)
-      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - JEST_JUNIT_OUTPUT_DIR=./reports/integration
       - JEST_JUNIT_OUTPUT_NAME=integration-report.xml
+      
+       # 👇 Variables recomendadas por Testcontainers para contenedores dentro de Docker
+      - TESTCONTAINERS_HOST_OVERRIDE=host.docker.internal
+      - DOCKER_HOST=tcp://host.docker.internal:2375
 
-      # 👇 Hace explícito el host de Docker
-      - DOCKER_HOST=unix:///var/run/docker.sock
-
-      # 👇 Opcional: permite a Testcontainers omitir comprobaciones de TLS
-      - TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE=/var/run/docker.sock
-      - TESTCONTAINERS_RYUK_DISABLED=true
