--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,15 +34,20 @@ steps:
       docker-compose up -d
     displayName: 'Start test containers'
 
-  # 6️⃣ Ejecutar Unit Tests dentro del contenedor
+  # 6️⃣ Ejecutar Unit Tests con límite de memoria
   - script: |
-      docker exec unit-tests sh -c "npm run test:unit || true"
-    displayName: 'Run Unit Tests'
+      docker exec \
+        --memory=1g \
+        unit-tests sh -c "node --max-old-space-size=1024 node_modules/jest/bin/jest.js tests/Unitarias --runInBand --verbose --reporters=default --reporters=jest-junit"
+    displayName: 'Run Unit Tests (with memory limit)'
 
-  # 7️⃣ Ejecutar Integration Tests dentro del contenedor
+
+  # 7️⃣ Ejecutar Integration Tests con límite de memoria
   - script: |
-      docker exec integration-tests sh -c "npm run test:integration || true"
-    displayName: 'Run Integration Tests'
+      docker exec \
+        --memory=2g \
+        integration-tests sh -c "node --max-old-space-size=2048 node_modules/jest/bin/jest.js tests/Integracion --runInBand --verbose --reporters=default --reporters=jest-junit"
+    displayName: 'Run Integration Tests (with memory limit)'
     env:
       # Variables para Testcontainers dentro del contenedor
       DOCKER_HOST: tcp://host.docker.internal:2375
