--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2",
     "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.3",
+    "@jest/globals": "^30.2.0",
     "babel-jest": "^30.2.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "jest": "^30.2.0",
     "jest-junit": "^16.0.0",
     "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "testcontainers": "^11.7.1"
