--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ pool:
 variables:
   DOCKER_BUILDKIT: 1
   SONAR_HOST_URL: "http://localhost:9000"
-  SONAR_TOKEN: "$(SonarToken)"   # lo guardas como secret variable
+  SONAR_TOKEN: "$(SonarTokenn)"   # lo guardas como secret variable
 
 steps:
   # 1️⃣ Checkout del código
